samples/_failures_safe/1761433250_bbe7ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b10df873.c: In function ‘main’:
./samples/SAFE/__tmp_b10df873.c:150:13: error: expected declaration or statement at end of input
  150 |             for (int i = 0; i < rows1; i++) {
      |             ^~~
./samples/SAFE/__tmp_b10df873.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b10df873.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b10df873.c:150:13: error: expected declaration or statement at end of input
